--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
   <description>       </description>
    <dependencies>
   <dependency>
-   <groupId>junit</groupId>
-   <artifactId>junit</artifactId>
-   <version>4.12</version>
-   <scope>test</scope>
-  </dependency>
+	<groupId>org.testng</groupId>
+	<artifactId>testng</artifactId>
+	<version>6.8.21</version>
+	<scope>test</scope>
+</dependency>
  </dependencies>
  <build>
   <plugins>
