--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sqa.MA</groupId>
-  <artifactId>BasicProject</artifactId>
+  <artifactId>advanced-project</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>BasicProject</name>
-  <description>       </description>
+  <name>advanced-project</name>
+  <description> For advanced project     </description>
    <dependencies>
   <dependency>
    <groupId>junit</groupId>
