--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 	<version>6.8.21</version>
 	<scope>test</scope>
 </dependency>
+<dependency>
+	<groupId>org.seleniumhq.selenium</groupId>
+	<artifactId>selenium-java</artifactId>
+	<version>2.53.0</version>
+</dependency>
+
  </dependencies>
  <build>
   <plugins>
