--- a/src/main/resources/shared-map-ui.properties
+++ b/src/main/resources/shared-map-ui.properties
@@ -1,1 +1,4 @@
-# Shared Map UI
+# Shared Map UI File
+usernameFld = //div/div[4]/span[2]/input
+passwordFld = //div/div[5]/span[2]/input
+signInBtn = //*[@id='gh-ug']
